--- a/deploy/k8s/base/orchestrator.yaml
+++ b/deploy/k8s/base/orchestrator.yaml
@@ -17,6 +17,7 @@ metadata:
     security.kubernetes.io/security-review: "approved"
     security.kubernetes.io/serviceaccount-token-exception: "CKV_K8S_38-approved"
     security.kubernetes.io/serviceaccount-token-justification: "Required for O-RAN orchestration API access"
+    checkov.io/skip1: CKV_K8S_38=Orchestrator requires K8s API access for managing VNF deployments and network slices
 spec:
   replicas: 1
   selector:
