--- a/deploy/k8s/base/vnf-operator.yaml
+++ b/deploy/k8s/base/vnf-operator.yaml
@@ -17,6 +17,7 @@ metadata:
     security.kubernetes.io/security-review: "approved"
     security.kubernetes.io/serviceaccount-token-exception: "CKV_K8S_38-approved"
     security.kubernetes.io/serviceaccount-token-justification: "Required for Kubernetes operator API access"
+    checkov.io/skip1: CKV_K8S_38=VNF operator requires K8s API access for managing VNF lifecycle and resources
 spec:
   replicas: 1
   selector:
