fix: resolve all golangci-lint issues and improve code quality
- Fix vnf-operator compilation issues on Windows
- Resolve golangci-lint errors across all Go packages
- Fix Python code formatting and type hints in NLP modules
- Add missing RBAC configuration for vnf-operator
- Improve error handling and remove unused variables
- Fix test assertions and mock implementations
- Normalize line endings for cross-platform compatibility
- Add security improvements to filepath and subprocess handling
- Update dashboard and integration tests for better coverage

All tests passing and lint checks resolved.

--- a/.github/workflows/production-deployment.yml
+++ b/.github/workflows/production-deployment.yml
@@ -220,6 +220,11 @@ jobs:
             ${{
               matrix.component == 'tn-agent' && 'deploy/docker/tn-agent/Dockerfile' ||
               matrix.component == 'tn-manager' && 'deploy/docker/tn-manager/Dockerfile' ||
+              matrix.component == 'orchestrator' && 'deploy/docker/orchestrator/Dockerfile' ||
+              matrix.component == 'o2-client' && 'deploy/docker/o2-client/Dockerfile' ||
+              matrix.component == 'vnf-operator' && 'deploy/docker/vnf-operator/Dockerfile' ||
+              matrix.component == 'ran-dms' && 'deploy/docker/ran-dms/Dockerfile' ||
+              matrix.component == 'cn-dms' && 'deploy/docker/cn-dms/Dockerfile' ||
               format('{0}/Dockerfile', env.COMPONENT_PATH)
             }}
           push: true
