fix: resolve multiple CI workflow issues for stable builds
Comprehensive fixes for CI pipeline stability and reliability:

## 🔧 Kubebuilder Installation Issues
- Updated from non-existent v3.10.0 to working v3.15.1
- Fixed download URL format (binary instead of tar.gz archive)
- Improved installation script for new binary format
- Added proper file validation and error handling

## 🔧 MyPy Type Checking Issues
- Fixed "duplicate module" error in Python analysis
- Changed 'mypy .' to 'mypy *.py --explicit-package-bases'
- Prevents module path conflicts in nlp/ directory

## 🔧 Go Security Scanner (gosec) Issues
- Added GITHUB_TOKEN environment variable for authentication
- Configured git to use GitHub token for private module access
- Prevents "terminal prompts disabled" authentication failures

## 🔧 Cosign Image Signing Issues
- Added missing 'id: build' to docker build step
- Fixed malformed image references (ending with @ but no digest)
- Improved tag parsing and error handling with validation
- Added build success condition checks before signing
- Specified cosign version v2.2.4 for consistency

## 🔧 Version Updates & Standards
- Updated golangci-lint to v1.64.2 (minimum required for Go 1.24.7)
- Ensured Go 1.24.7 compatibility across all components
- Added version requirements documentation in CLAUDE.md

## 🛡️ Quality & Security Improvements
- Enhanced error handling with debug output
- Added proper validation checks before operations
- Improved workflow resilience and failure recovery
- Better logging for troubleshooting CI issues

These changes address all major CI failure points and should provide
stable, reliable builds going forward.

--- a/.github/workflows/production-deployment.yml
+++ b/.github/workflows/production-deployment.yml
@@ -213,6 +213,7 @@ jobs:
           name: ${{ matrix.component }}-coverage
 
       - name: Build and push container image
+        id: build
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -233,14 +234,34 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           platforms: linux/amd64,linux/arm64
+          outputs: type=image,name=target,annotation-index.org.opencontainers.image.description=Multi-platform build
 
-      - name: Sign container image
+      - name: Install cosign
         uses: sigstore/cosign-installer@v3
+        with:
+          cosign-release: 'v2.2.4'
       - name: Sign the published Docker image
+        if: steps.build.outcome == 'success'
         env:
           COSIGN_EXPERIMENTAL: 1
         run: |
-          echo "${{ steps.meta.outputs.tags }}" | xargs -I {} cosign sign --yes {}@${{ steps.build.outputs.digest }}
+          # Verify digest exists
+          if [ -z "${{ steps.build.outputs.digest }}" ]; then
+            echo "Error: Build digest is empty. Cannot sign image."
+            echo "Build outputs: ${{ toJson(steps.build.outputs) }}"
+            exit 1
+          fi
+
+          echo "Signing images with digest: ${{ steps.build.outputs.digest }}"
+          echo "Tags to sign: ${{ steps.meta.outputs.tags }}"
+
+          # Sign each tag with the digest
+          echo "${{ steps.meta.outputs.tags }}" | tr ',' '\n' | while read -r tag; do
+            if [ -n "$tag" ]; then
+              echo "Signing: ${tag}@${{ steps.build.outputs.digest }}"
+              cosign sign --yes "${tag}@${{ steps.build.outputs.digest }}"
+            fi
+          done
 
   # Integration tests
   integration-tests:
