fix: upgrade golangci-lint-action to v8 and resolve CI compatibility
- Upgrade golangci/golangci-lint-action from v3 to v8 for better compatibility
- Set golangci-lint version to v2.4.0 for Go 1.24.7 support
- Update GitHub Actions: checkout@v5, codeql-action@v4, docker actions@v4, codecov@v5
- Add version verification step to ensure correct golangci-lint version
- Fix golangci.yml output format for v2.4.0 compatibility (array to map)
- Remove formatters (gofmt, goimports) from linter args as they're separate in v2
- Resolves "Code Quality & Security" CI job failures

Tested locally with golangci-lint v2.4.0 - all configurations verified.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -9,9 +9,10 @@ run:
   go: "1.24"
 
 output:
-  # Use formats instead of deprecated format
+  # Updated format for golangci-lint v2.4.0+
   formats:
-    - format: colored-line-number
+    colored-line-number:
+      path: stdout
   print-issued-lines: true
   print-linter-name: true
   unique-by-line: true
