--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4
+      uses: actions/checkout@v5
       with:
         fetch-depth: 0
 
@@ -147,18 +147,23 @@ jobs:
 
     - name: Upload SARIF file
       if: always()
-      uses: github/codeql-action/upload-sarif@v3
+      uses: github/codeql-action/upload-sarif@v4
       with:
         sarif_file: gosec.sarif
         category: 'gosec-ci'
         wait-for-processing: false
       continue-on-error: true
 
+    - name: Verify golangci-lint version
+      run: |
+        golangci-lint version
+        echo "✅ golangci-lint version confirmed"
+
     - name: Run golangci-lint with security checks
-      uses: golangci/golangci-lint-action@v3
+      uses: golangci/golangci-lint-action@v8
       with:
-        version: latest
-        args: --timeout=10m --enable=gosec,gocritic,revive,staticcheck,unparam,unused,ineffassign,misspell,goconst,gocyclo,gofmt,goimports
+        version: v2.4.0
+        args: --timeout=10m --enable=gosec,gocritic,revive,staticcheck,unparam,unused,ineffassign,misspell,goconst,gocyclo --disable=gofmt,goimports
 
     - name: Upload gosec artifacts
       uses: actions/upload-artifact@v4
@@ -188,7 +193,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4
+      uses: actions/checkout@v5
 
     - name: Set up Go
       uses: actions/setup-go@v5
@@ -302,7 +307,7 @@ jobs:
         path: ${{ env.COMPONENT_PATH }}/coverage.*
 
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v5
       if: env.COMPONENT_PATH != ''
       with:
         file: ${{ env.COMPONENT_PATH }}/coverage.out
@@ -329,13 +334,13 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4
+      uses: actions/checkout@v5
 
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      uses: docker/setup-buildx-action@v4
 
     - name: Log in to Container Registry
-      uses: docker/login-action@v3
+      uses: docker/login-action@v4
       with:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
@@ -413,7 +418,7 @@ jobs:
         exit-code: '0'
 
     - name: Upload Trivy scan results
-      uses: github/codeql-action/upload-sarif@v3
+      uses: github/codeql-action/upload-sarif@v4
       if: always()
       with:
         sarif_file: 'trivy-results-${{ matrix.component }}.sarif'
@@ -439,7 +444,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4
+      uses: actions/checkout@v5
 
     - name: Set up Go
       uses: actions/setup-go@v5
@@ -529,7 +534,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4
+      uses: actions/checkout@v5
 
     - name: Set up infrastructure
       run: |
@@ -607,7 +612,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4
+      uses: actions/checkout@v5
 
     - name: Set up complete test environment
       run: |
@@ -643,7 +648,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4
+      uses: actions/checkout@v5
 
     - name: Configure kubectl
       run: |
@@ -676,7 +681,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4
+      uses: actions/checkout@v5
 
     - name: Generate changelog
       id: changelog
