--- a/.github/workflows/enhanced-ci.yml
+++ b/.github/workflows/enhanced-ci.yml
@@ -368,7 +368,7 @@ jobs:
       uses: golangci/golangci-lint-action@v8
       with:
         version: ${{ env.GOLANGCI_LINT_VERSION }}
-        args: --timeout=15m --out-format=colored-line-number --issues-exit-code=0
+        args: --timeout=15m --issues-exit-code=0
         skip-cache: false
         skip-save-cache: false
         only-new-issues: false
