fix: resolve golangci-lint installation issue and upgrade to v2.5.0
- Fix error code 127 by using official golangci/golangci-lint-action@v8 instead of direct command
- Replace manual 'golangci-lint version' command with Action's --version argument
- Upgrade golangci-lint from v2.4.0 to v2.5.0 (latest with new linters: godoclint, unqueryvet, iotamixing)
- Update GOLANGCI_LINT_VERSION in enhanced-ci.yml to v2.5.0 for consistency
- Update CLAUDE.md version requirements to reflect v2.5.0
- Add golangci-lint v2 configuration with version specification

This resolves the "command not found" issue in CI where golangci-lint
was not available in PATH before the Action installed it.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -154,15 +154,16 @@ jobs:
         wait-for-processing: false
       continue-on-error: true
 
-    - name: Verify golangci-lint version
-      run: |
-        golangci-lint version
-        echo "✅ golangci-lint version confirmed"
+    - name: Show golangci-lint version
+      uses: golangci/golangci-lint-action@v8
+      with:
+        version: v2.5.0
+        args: --version
 
     - name: Run golangci-lint with security checks
       uses: golangci/golangci-lint-action@v8
       with:
-        version: v2.4.0
+        version: v2.5.0
         args: --timeout=10m --enable=gosec,gocritic,revive,staticcheck,unparam,unused,ineffassign,misspell,goconst,gocyclo --disable=gofmt,goimports
 
     - name: Upload gosec artifacts
