fix: resolve envtest "etcd not found" issue in CI tests
Install setup-envtest tool and configure KUBEBUILDER_ASSETS environment:
- Add setup-envtest installation step in CI workflow
- Configure K8s version 1.28.0 (consistent with KUBECTL_VERSION)
- Export KUBEBUILDER_ASSETS environment variable for envtest binaries
- Improve suite_test.go with proper scheme initialization:
  * Add runtime.NewScheme() and proper imports
  * Register clientgoscheme and custom manov1alpha1 schemes in init()
  * Enable strict CRD validation (ErrorIfCRDPathMissing: true)
  * Use dedicated scheme instance instead of global scheme

This resolves controller-runtime v0.22.x envtest issues where etcd,
kube-apiserver, and kubectl binaries were not found during testing.
The setup-envtest tool automatically downloads and configures these
required binaries with proper KUBEBUILDER_ASSETS path.

Fixes: "etcd not found" and "vnfs.vnf.oran.io not found" test errors.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -281,7 +281,21 @@ jobs:
           echo "No go.mod found, skipping dependency installation for ${{ matrix.component }}"
         fi
 
-    - name: Run unit tests
+    - name: Install setup-envtest
+      run: |
+        go install sigs.k8s.io/controller-runtime/tools/setup-envtest@latest
+
+    - name: Download envtest binaries and export KUBEBUILDER_ASSETS
+      shell: bash
+      run: |
+        # Use K8s version consistent with KUBECTL_VERSION
+        K8S_VERSION=1.28.0
+        # Download kube-apiserver/etcd/kubectl binaries and get env vars
+        eval "$(setup-envtest use -p env ${K8S_VERSION})"
+        # Make available to next steps
+        echo "KUBEBUILDER_ASSETS=${ENVTEST_KUBEBUILDER_ASSETS}" >> $GITHUB_ENV
+
+    - name: Run unit/integration tests
       working-directory: ${{ env.COMPONENT_PATH }}
       run: |
         if [ -f go.mod ]; then
