fix: remove invalid --version flag from golangci-lint-action args
The golangci-lint-action automatically executes 'golangci-lint run', and
putting '--version' in args results in 'golangci-lint run --version' which
is invalid since the 'run' subcommand doesn't have a --version flag.

- Remove the separate version check step with args: --version
- golangci-lint-action@v8 automatically displays version info when it starts
- Keep only the actual security checks with proper run arguments

This resolves the 'Error: unknown flag: --version' issue in CI.

References: golangci-lint-action is designed for golangci-lint v2.1+
and automatically handles version display and tool installation.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -10,12 +10,17 @@ run:
   go: "1.24"
 
 output:
-  # Format settings for golangci-lint v2
   formats:
-    - format: colored-line-number
+    json:
+      path: stderr
+    checkstyle:
+      path: report.xml
+    # v1 的 colored-line-number 改成 text
+    text:
       path: stdout
-  print-issued-lines: true
-  print-linter-name: true
+      colors: true              # colored-line-number 等價
+      print-issued-lines: true  # 這些選項移到 text 下面
+      print-linter-name: true
   unique-by-line: true
 
 linters:
