fix: resolve golangci-lint v2.5.0 compatibility issues
- Remove --disable=gofmt,goimports from CI args (not valid in v2)
- Remove typecheck from linters.enable (not a linter in v2)
- Remove gofmt/goimports from linters.enable (moved to formatters in v2)
- Add formatters section with gofmt and goimports configuration
- Update .golangci.yml to version: "2" format

This resolves the error: 'typecheck is not a linter, it cannot be enabled or disabled'

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -158,7 +158,7 @@ jobs:
       uses: golangci/golangci-lint-action@v8
       with:
         version: v2.5.0
-        args: --timeout=10m --enable=gosec,gocritic,revive,staticcheck,unparam,unused,ineffassign,misspell,goconst,gocyclo --disable=gofmt,goimports
+        args: --timeout=10m --enable=gosec,gocritic,revive,staticcheck,unparam,unused,ineffassign,misspell,goconst,gocyclo
 
     - name: Upload gosec artifacts
       uses: actions/upload-artifact@v4
