fix: install iperf3 in CI to resolve integration test failures
- Add iperf3 installation to unit-tests job before running tests
- Add iperf3 installation to integration-tests job before Kind cluster setup
- This resolves the error: 'exec: "iperf3": executable file not found in $PATH'

All integration tests requiring iperf3 should now pass successfully.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -279,6 +279,11 @@ jobs:
       run: |
         go install sigs.k8s.io/controller-runtime/tools/setup-envtest@latest
 
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y iperf3
+
     - name: Download envtest binaries and export KUBEBUILDER_ASSETS
       shell: bash
       run: |
@@ -477,6 +482,11 @@ jobs:
         curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
         chmod 700 get_helm.sh
         ./get_helm.sh --version ${{ env.HELM_VERSION }}
+
+    - name: Install iperf3
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y iperf3
 
     - name: Free up disk space
       run: |
